# ShipSignal

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  action.yml  git  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  live-badge.yml  release.yml
bellwether/: README.md  __init__.py  cli.py  gitinfo.py  impact.py  modules.py  report.py  scanner.py  scoring.py  setupcheck.py
docs/: getting-started.md  github-action.md
examples/: README.md  crown-audit.html  crown-audit.json  crown-audit.md  jest-recovery.html  jest-recovery.json  jest-recovery.md
examples/workflows/: live-badge.yml  pr-comment.yml  shipsignal.yml  smoke-test.yml
shipsignal/: README.md  __init__.py  ansi.py  cli.py  config.py  detectors.py  gitinfo.py  glossary.py  impact.py  modules.py  prdata.py  report.py  scanner.py  score_impact.py  scoring.py  setupcheck.py  snapshot.py  snippets.py  survival.py  timeline.py  trend.py
tests/: test_ansi.py  test_cli.py  test_config.py  test_gitinfo.py  test_glossary.py  test_impact.py  test_outcomes.py  test_prdata.py  test_recovery.py  test_release_cadence.py  test_scanner.py  test_score_impact.py  test_snapshot.py  test_survival.py  test_survival_render.py  test_timeline.py  test_trend.py  test_version_sync.py
tests/fixtures/: prdata_calcom.json  prdata_jest.json  prdata_null_merge.json  prdata_wrong_shape.json
