[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipsignal"
version = "0.1.4"
description = "AI impact, delivery-health & readiness scanner — is AI actually changing how your team ships?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeremy Petersen" }]
keywords = ["ai", "agents", "impact", "delivery", "readiness", "git", "static-analysis", "dora"]
dependencies = []

[project.urls]
Homepage = "https://github.com/jpaul67/shipsignal"
Repository = "https://github.com/jpaul67/shipsignal"
Issues = "https://github.com/jpaul67/shipsignal/issues"

[project.scripts]
shipsignal = "shipsignal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipsignal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
