[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipsignal"
version = "0.10.0"
description = "AI impact, delivery-health & readiness scanner — is AI actually changing how your team ships?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeremy Petersen" }]
keywords = ["ai", "agents", "impact", "delivery", "readiness", "git", "static-analysis", "dora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jpaul67/ShipSignal"
Repository = "https://github.com/jpaul67/ShipSignal"
Issues = "https://github.com/jpaul67/ShipSignal/issues"

[project.scripts]
shipsignal = "shipsignal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["shipsignal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
